force-app/hfs-backend/main/default/objects/hfs_Registration_Config__mdt/hfs_Registration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Per-environment configuration for the self-registration flow so no hard-coded Ids or names live in Apex.</description>
    <label>Registration Config</label>
    <pluralLabel>Registration Configs</pluralLabel>
</CustomObject>