force-app/hfs-backend/main/default/objects/hfs_Registration_Config__mdt/fields/Community_Plus_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Plus_Profile_Name__c</fullName>
    <description>Profile assigned to self-registered users.</description>
    <label>Community Plus Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>