force-app/hfs-backend/main/default/objects/hfs_Registration_Config__mdt/fields/Partner_Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Permission_Set_Name__c</fullName>
    <description>Permission set API name auto-assigned to each self-registered partner User.</description>
    <label>Partner Permission Set Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>