force-app/hfs-backend/main/default/objects/hfs_Registration_Config__mdt/fields/Portal_Account_Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Account_Owner_Username__c</fullName>
    <description>Username of the internal owner assigned to each self-registered partner Account. This user MUST have a UserRole, because Salesforce requires the owner of a portal (community) account to hold a role before a portal User can be created under it. Leave the account owner as this user rather than the guest/running user (who has no role).</description>
    <label>Portal Account Owner Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>